# helios

./: .gitignore  Cargo.toml  PLAN.md  README.md  bash.exe.stackdump  justfile  rust-toolchain.toml
.github/workflows/: check.yml  image-diag.yml  image.yml
crates/agent-host/: Cargo.toml
crates/agent-host/src/: main.rs
crates/applets/: Cargo.toml
crates/applets/src/: lib.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/comp/: Cargo.toml
crates/comp/src/: backend.rs  canvas.rs  events_client.rs  events_publisher.rs  handlers.rs  keybindings.rs  lib.rs  main.rs  render.rs  runtime.rs  state.rs  wayland.rs
crates/comp/src/backend/: drm.rs  mod.rs  winit.rs
crates/comp/src/backend/drm/: device.rs  input.rs  mod.rs  output.rs  run.rs  session.rs
crates/comp/src/xwayland/: mod.rs  spawn.rs  wm.rs
crates/compat/: Cargo.toml
crates/compat/src/: lib.rs
crates/events/: Cargo.toml
crates/events/src/: dbus_source.rs  journal_source.rs  lib.rs  main.rs  network_source.rs  procfs_source.rs  publisher.rs  socket_ingress.rs  socket_server.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  main.rs  protocol.rs  store_client.rs  tools.rs
crates/schema/: Cargo.toml
crates/schema/migrations/: 0001_h_origin.sql  0002_os_entities.sql
crates/schema/src/: canvas.rs  entities.rs  events.rs  ids.rs  ipc.rs  lib.rs  migrations.rs
crates/shell/: Cargo.toml
crates/shell/src/: main.rs
crates/store/: Cargo.toml
crates/store/src/: db.rs  events_client.rs  lib.rs  main.rs  projector.rs  publisher.rs  server.rs  spawn.rs
crates/store/tests/: integration.rs  integration_move.rs
crates/ui-wit/: Cargo.toml
crates/ui-wit/src/: lib.rs
crates/ui-wit/wit/: canvas.wit
distro/: README.md  build-image.sh  mkosi.conf  stage-and-build.sh
distro/diag/: README.md  build-image.sh  mkosi.conf
distro/units/: README.md  helios-events.service  helios-store.service
docs/adr/: 0001-rust-wasm-stack.md  0002-local-only-telemetry.md  0003-phase-2-compositor-scope.md  0004-phase-2-m4-m5-scope.md
docs/research/: 01-compositor.md  02-distro-build.md  03-wasm-applets.md  04-observability.md  05-h-reuse-audit.md  06-smithay-0.7-gotchas.md  07-xwayland-quirks.md  08-agent-canvas-loop.md
scripts/: bootstrap-linux-dev.sh  install-nomachine.sh
