[package]
name = "helios-comp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "heliOS Wayland compositor — Smithay-based, renders the canvas world. The defining surface of the OS."

[[bin]]
name = "helios-comp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
helios-schema.workspace = true
helios-events.workspace = true
helios-store.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Phase 2 backend deps — uncomment as compositor work begins.
# Each adds system-library requirements at link time:
#   smithay (with renderer_gl)  → libdrm-dev, libgbm-dev, libegl1-mesa-dev
#   smithay (with backend_libinput) → libinput-dev, libudev-dev
#   smithay (with xwayland)     → libxcb-dev
#   wayland-server              → libwayland-dev
# Until these are in CI's apt install list AND on the housam-server
# host, the smithay integration code lives behind feature gates.
#
# [target.'cfg(target_os = "linux")'.dependencies]
# smithay = { version = "0.7", features = ["renderer_gl", "backend_winit", "backend_libinput", "backend_drm", "desktop", "xwayland"] }
# calloop = "0.14"
# wayland-server = "0.31"
# wayland-protocols = "0.32"
# input = "0.9"

[dev-dependencies]
