[package]
name = "helios-comp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "heliOS Wayland compositor — Smithay-based, renders the canvas world. The defining surface of the OS."

[[bin]]
name = "helios-comp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
helios-schema.workspace = true
helios-events.workspace = true
helios-store.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Phase 2 backend deps. Linux-only. Each adds system-library link
# requirements the CI apt install step now covers (libwayland-dev,
# libxkbcommon-dev, libudev-dev, libgbm-dev, libegl1-mesa-dev,
# libinput-dev, libdrm-dev).
#
# Feature set is deliberately narrow for the first wired commit:
#   - desktop          → Space<Window>, scenegraph primitives
#   - wayland_frontend → xdg-shell, shm, seat, output, data_device
#   - backend_winit    → nested-Wayland iteration host (NoMachine path)
#
# Not yet pulled in:
#   - backend_drm / backend_libinput → bare-metal session, lands when
#     we have a working iteration loop on real hardware
#   - renderer_gl → GLES rendering, lands alongside the first surface
#     compositing pass
#   - xwayland → legacy app support, Phase 2 month 4+

[target.'cfg(target_os = "linux")'.dependencies]
smithay = { version = "0.7", default-features = false, features = [
    "desktop",
    "wayland_frontend",
    "backend_winit",
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "renderer_gl",
    "renderer_multi",
    "xwayland",
] }
calloop = "0.14"
# m-2.5.2: libc::setsid in `runtime::spawn_default_terminal`.
libc = "0.2"

[dev-dependencies]
