[package]
name = "helios-events"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "System-events bus daemon — eBPF + procfs + zbus + journal + netlink → tokio broadcast → Unix-socket fanout."

[[bin]]
name = "helios-events"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
helios-schema.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Linux-only sources for the events bus. Activated by target gating below
# so the workspace still builds on Windows / macOS for schema work.

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"

# Phase 1 dependencies — uncomment as each additional source lands.
# aya = "0.13"
# aya-ebpf = "0.1"
# zbus = { version = "5", default-features = false, features = ["tokio"] }
# zbus_systemd = "0.25"
# rtnetlink = "0.14"
# netlink-packet-sock-diag = "0.4"
# nix = { version = "0.29", features = ["fanotify"] }
# systemd = "0.10"  # journald tail
