[package]
name = "helios-events"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "System-events bus daemon — eBPF + procfs + zbus + journal + netlink → tokio broadcast → Unix-socket fanout."

[[bin]]
name = "helios-events"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
helios-schema.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Linux-only sources for the events bus. Activated by target gating below
# so the workspace still builds on Windows / macOS for schema work.

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"
zbus = { version = "5", default-features = false, features = ["tokio"] }
futures-util = "0.3"

# Deferred Phase 2+ dependencies — uncomment when those sources land.
# Each requires either kernel-program iteration (aya), CAP_SYS_ADMIN
# at runtime (fanotify), or libsystemd-dev linkage (systemd FFI).
# aya = "0.13"
# aya-ebpf = "0.1"
# nix = { version = "0.29", features = ["fanotify"] }
# systemd = "0.10"  # journald tail via libsystemd FFI
# Note: journal_source uses `journalctl --follow --output=json` as a
# subprocess for v0.1 — pure Rust, no FFI, no extra deps.
