[package]
name = "helios-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP gateway — JSON-RPC 2.0 over stdio, exposes the entity store and tools to Claude Code."

[[bin]]
name = "helios-mcp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
helios-schema.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
