[package]
name = "helios-schema"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Canonical entity types and SQL migrations for heliOS. Ported from the H system."

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
