[package]
name = "helios-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Login session — Claude Code as the user shell, with the events bus, store, and MCP gateway wired in."

[[bin]]
name = "helios-shell"
path = "src/main.rs"

[dependencies]
helios-schema.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Phase 2 dependencies (PAM session integration). Not needed for the
# Phase 1 demo where helios-shell is exec'd directly by the user.
# [target.'cfg(target_os = "linux")'.dependencies]
# nix = "0.29"
# pam-bindings = "0.1"
