[package]
name = "helios-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Entity store daemon — runs schema migrations, subscribes to the events bus, persists events into SQLite, exposes typed queries on a Unix socket."

[[bin]]
name = "helios-store"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
helios-schema.workspace = true
helios-events.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# rusqlite bundled compiles SQLite from source so the binary is
# self-contained — no system libsqlite3 dependency at runtime.
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

[dev-dependencies]
tempfile = "3"
